--- a/app/index.html
+++ b/app/index.html
@@ -19,17 +19,17 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-
-    <div class="hero-unit">
-      <h1>'Allo, 'Allo!</h1>
-      <p>You now have</p>
-      <ul>
-      <li>HTML5 Boilerplate</li>
-
-
-      </ul>
+    <div id="mainContainer">
+        <div id="header"> 
+        s
+        </div>
+        <div id="contentContainer">
+            d
+        </div>
+        
     </div>
+
+      
 
 
     <!-- build:js(.) scripts/vendor.js -->
