Second Stage build
The other content div

--- a/app/index.html
+++ b/app/index.html
@@ -21,10 +21,20 @@
     <![endif]-->
     <div id="mainContainer">
         <div id="header"> 
-        s
+            HEADER
         </div>
         <div id="contentContainer">
-            d
+            <div id="leftContainer">
+                Video Info
+            </div>
+            <div id="rightContainer">
+                <div id="videoContainer">
+                    This is the videoContainer
+                </div>
+                <div id="seleccionContainer">
+                    This is the seleccion container
+                </div>
+            </div>
         </div>
         
     </div>
@@ -50,6 +60,7 @@
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/main.js"></script>
+        <script src="../bower_components/jquery/dist/jquery.min.js"></script>
         <!-- endbuild -->
 </body>
 </html>
