--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,20 @@
                     This is the videoContainer
                 </div>
                 <div id="seleccionContainer">
-                    This is the seleccion container
+                    This is the carrusel container
+                    <div id='carousel_container'>  
+                      <div id='left_scroll'><img src='images/left.png'  width="18px"/></div>  
+                      <div id='carousel_inner'>  
+                            <ul id='carousel_ul'>  
+                                <li><a href='#'><img src='images/item1.png' width=" 150px"/></a></li>  
+                                <li><a href='#'><img src='images/item2.png' width=" 150px" /></a></li>  
+                                <li><a href='#'><img src='images/item3.png' width=" 150px" /></a></li>  
+                                <li><a href='#'><img src='images/item4.png' width=" 150px" /></a></li>  
+                                <li><a href='#'><img src='images/item5.png' width=" 150px" /></a></li>  
+                            </ul>  
+                      </div>  
+                      <div id='right_scroll'><img src='images/right.png' width="18px"/></div>  
+                    </div> 
                 </div>
             </div>
         </div>
@@ -57,10 +70,10 @@
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
-
+        
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/main.js"></script>
-        <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+        
         <!-- endbuild -->
 </body>
 </html>
